@@ -105,10 +105,8 @@ enum {
 };
 #define CERTIFICATE_COMMENT "Automatically generated by Ncat. See https://nmap.org/ncat/."
 
-SSL_CTX *setup_ssl_listen(void)
+SSL_CTX *setup_ssl_listen(const SSL_METHOD *method)
 {
-    const SSL_METHOD *method;
-
     if (sslctx)
         goto done;
 
@@ -138,8 +136,8 @@ SSL_CTX *setup_ssl_listen(void)
     if (!RAND_status())
         bye("Failed to seed OpenSSL PRNG (RAND_status returned false).");
 
-    if (!(method = SSLv23_server_method()))
-        bye("SSLv23_server_method(): %s.", ERR_error_string(ERR_get_error(), NULL));
+    if (!method)
+        bye("Invalid SSL method: %s.", ERR_error_string(ERR_get_error(), NULL));
     if (!(sslctx = SSL_CTX_new(method)))
         bye("SSL_CTX_new(): %s.", ERR_error_string(ERR_get_error(), NULL));
 
